experiments/ephemeral-api-coverage/results/2026-09-19/kubewarden/run-2/evidence/source-policy.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: no-privileged-pod
  labels:
    helm.sh/chart: admission-controller-6.0.2
    app.kubernetes.io/name: admission-controller
    app.kubernetes.io/instance: admission-controller
    app.kubernetes.io/version: "v1.37.2"
    app.kubernetes.io/part-of: kubewarden
    app.kubernetes.io/component: policy
    app.kubernetes.io/managed-by: kubewarden-controller
  annotations:
    io.kubewarden.policy.severity: medium
    io.kubewarden.policy.category: PSP
    
spec:
  mode: protect
  failurePolicy: Fail
  module: ghcr.io/kubewarden/policies/pod-privileged:v1.0.13
  mutating: false
  backgroundAudit: true
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations: ["CREATE"] # kubernetes doesn't allow to add/remove privileged containers to an already running pod
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["replicationcontrollers"]
      operations: ["CREATE", "UPDATE"]
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      resources: ["deployments", "replicasets", "statefulsets", "daemonsets"]
      operations: ["CREATE", "UPDATE"]
    - apiGroups: ["batch"]
      apiVersions: ["v1"]
      resources: ["jobs", "cronjobs"]
      operations: ["CREATE", "UPDATE"]
  namespaceSelector:
    matchExpressions:
    - key: "kubernetes.io/metadata.name"
      operator: NotIn
      values:
      - calico-apiserver
      - calico-system
      - capi-system
      - cattle-capi-system
      - cattle-alerting
      - cattle-csp-adapter-system
      - cattle-elemental-system
      - cattle-epinio-system
      - cattle-externalip-system
      - cattle-fleet-local-system
      - cattle-fleet-system
      - cattle-gatekeeper-system
      - cattle-global-data
      - cattle-global-nt
      - cattle-impersonation-system
      - cattle-istio
      - cattle-istio-system
      - cattle-logging
      - cattle-logging-system
      - cattle-monitoring-system
      - cattle-neuvector-system
      - cattle-prometheus
      - cattle-provisioning-capi-system
      - cattle-resources-system
      - cattle-sriov-system
      - cattle-system
      - cattle-turtles-system
      - cattle-ui-plugin-system
      - cattle-windows-gmsa-system
      - cert-manager
      - cis-operator-system
      - fleet-default
      - ingress-nginx
      - istio-system
      - kube-node-lease
      - kube-public
      - kube-system
      - longhorn-system
      - rancher-alerting-drivers
      - security-scan
      - tigera-operator
  settings: 
    skip_ephemeral_containers: false
    skip_init_containers: false
